--- a/packages/micro-journeys/src/two-character-layout.scss
+++ b/packages/micro-journeys/src/two-character-layout.scss
@@ -8,8 +8,6 @@
   }
 
   &__character-row {
-    @include bolt-margin-top(xlarge);
-    @include bolt-margin-bottom(xlarge);
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
